[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 185.0
margin_bottom = 309.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="MainVBox" type="VBoxContainer" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 20

[node name="HideButton" type="Button" parent="Control/MainVBox"]
margin_right = 110.0
margin_bottom = 20.0
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Hide Settings"

[node name="MainContainer" type="VBoxContainer" parent="Control/MainVBox"]
margin_top = 40.0
margin_right = 160.0
margin_bottom = 302.0
rect_min_size = Vector2( 160, 0 )

[node name="EField" type="MarginContainer" parent="Control/MainVBox/MainContainer"]
margin_right = 160.0
margin_bottom = 30.0

[node name="IndividualVBox" type="VBoxContainer" parent="Control/MainVBox/MainContainer/EField"]
margin_right = 160.0
margin_bottom = 30.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="Control/MainVBox/MainContainer/EField/IndividualVBox"]
margin_right = 160.0
margin_bottom = 14.0
text = "E Field Strength"

[node name="HBox" type="HBoxContainer" parent="Control/MainVBox/MainContainer/EField/IndividualVBox"]
margin_top = 14.0
margin_right = 160.0
margin_bottom = 30.0

[node name="HSlider" type="HSlider" parent="Control/MainVBox/MainContainer/EField/IndividualVBox/HBox"]
margin_right = 116.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0

[node name="Label" type="Label" parent="Control/MainVBox/MainContainer/EField/IndividualVBox/HBox"]
margin_left = 120.0
margin_top = 1.0
margin_right = 160.0
margin_bottom = 15.0
rect_min_size = Vector2( 40, 0 )

[node name="BField" type="MarginContainer" parent="Control/MainVBox/MainContainer"]
margin_top = 34.0
margin_right = 160.0
margin_bottom = 64.0

[node name="IndividualVBox" type="VBoxContainer" parent="Control/MainVBox/MainContainer/BField"]
margin_right = 160.0
margin_bottom = 30.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="Control/MainVBox/MainContainer/BField/IndividualVBox"]
margin_right = 160.0
margin_bottom = 14.0
text = "B Field Strength"

[node name="HBox" type="HBoxContainer" parent="Control/MainVBox/MainContainer/BField/IndividualVBox"]
margin_top = 14.0
margin_right = 160.0
margin_bottom = 30.0

[node name="HSlider" type="HSlider" parent="Control/MainVBox/MainContainer/BField/IndividualVBox/HBox"]
margin_right = 116.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 0.05
step = 0.001
value = 0.01

[node name="Label" type="Label" parent="Control/MainVBox/MainContainer/BField/IndividualVBox/HBox"]
margin_left = 120.0
margin_top = 1.0
margin_right = 160.0
margin_bottom = 15.0
rect_min_size = Vector2( 40, 0 )

[node name="MinVelocity" type="MarginContainer" parent="Control/MainVBox/MainContainer"]
margin_top = 68.0
margin_right = 160.0
margin_bottom = 98.0

[node name="IndividualVBox" type="VBoxContainer" parent="Control/MainVBox/MainContainer/MinVelocity"]
margin_right = 160.0
margin_bottom = 30.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="Control/MainVBox/MainContainer/MinVelocity/IndividualVBox"]
margin_right = 160.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Min Velocity"

[node name="HBox" type="HBoxContainer" parent="Control/MainVBox/MainContainer/MinVelocity/IndividualVBox"]
margin_top = 14.0
margin_right = 160.0
margin_bottom = 30.0

[node name="HSlider" type="HSlider" parent="Control/MainVBox/MainContainer/MinVelocity/IndividualVBox/HBox"]
margin_right = 116.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = -100.0
max_value = 500.0
step = 5.0
value = 100.0
rounded = true

[node name="Label" type="Label" parent="Control/MainVBox/MainContainer/MinVelocity/IndividualVBox/HBox"]
margin_left = 120.0
margin_top = 1.0
margin_right = 160.0
margin_bottom = 15.0
rect_min_size = Vector2( 40, 0 )

[node name="MaxVelocity" type="MarginContainer" parent="Control/MainVBox/MainContainer"]
margin_top = 102.0
margin_right = 160.0
margin_bottom = 132.0

[node name="IndividualVBox" type="VBoxContainer" parent="Control/MainVBox/MainContainer/MaxVelocity"]
margin_right = 160.0
margin_bottom = 30.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="Control/MainVBox/MainContainer/MaxVelocity/IndividualVBox"]
margin_right = 160.0
margin_bottom = 14.0
text = "Max Velocity"

[node name="HBox" type="HBoxContainer" parent="Control/MainVBox/MainContainer/MaxVelocity/IndividualVBox"]
margin_top = 14.0
margin_right = 160.0
margin_bottom = 30.0

[node name="HSlider" type="HSlider" parent="Control/MainVBox/MainContainer/MaxVelocity/IndividualVBox/HBox"]
margin_right = 116.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 500.0
step = 5.0
value = 100.0
rounded = true

[node name="Label" type="Label" parent="Control/MainVBox/MainContainer/MaxVelocity/IndividualVBox/HBox"]
margin_left = 120.0
margin_top = 1.0
margin_right = 160.0
margin_bottom = 15.0
rect_min_size = Vector2( 40, 0 )

[node name="Timer" type="MarginContainer" parent="Control/MainVBox/MainContainer"]
margin_top = 136.0
margin_right = 160.0
margin_bottom = 166.0

[node name="IndividualVBox" type="VBoxContainer" parent="Control/MainVBox/MainContainer/Timer"]
margin_right = 160.0
margin_bottom = 30.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="Control/MainVBox/MainContainer/Timer/IndividualVBox"]
margin_right = 160.0
margin_bottom = 14.0
text = "Timer"

[node name="HBox" type="HBoxContainer" parent="Control/MainVBox/MainContainer/Timer/IndividualVBox"]
margin_top = 14.0
margin_right = 160.0
margin_bottom = 30.0

[node name="HSlider" type="HSlider" parent="Control/MainVBox/MainContainer/Timer/IndividualVBox/HBox"]
margin_right = 116.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 20.0
step = 0.5
value = 5.0

[node name="Label" type="Label" parent="Control/MainVBox/MainContainer/Timer/IndividualVBox/HBox"]
margin_left = 120.0
margin_top = 1.0
margin_right = 160.0
margin_bottom = 15.0
rect_min_size = Vector2( 40, 0 )

[node name="FilterLocation" type="MarginContainer" parent="Control/MainVBox/MainContainer"]
margin_top = 170.0
margin_right = 160.0
margin_bottom = 200.0

[node name="IndividualVBox" type="VBoxContainer" parent="Control/MainVBox/MainContainer/FilterLocation"]
margin_right = 160.0
margin_bottom = 30.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="Control/MainVBox/MainContainer/FilterLocation/IndividualVBox"]
margin_right = 160.0
margin_bottom = 14.0
text = "Filter Location"

[node name="HBox" type="HBoxContainer" parent="Control/MainVBox/MainContainer/FilterLocation/IndividualVBox"]
margin_top = 14.0
margin_right = 160.0
margin_bottom = 30.0

[node name="HSlider" type="HSlider" parent="Control/MainVBox/MainContainer/FilterLocation/IndividualVBox/HBox"]
margin_right = 116.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 100.0
max_value = 1500.0
step = 10.0
value = 100.0

[node name="Label" type="Label" parent="Control/MainVBox/MainContainer/FilterLocation/IndividualVBox/HBox"]
margin_left = 120.0
margin_top = 1.0
margin_right = 160.0
margin_bottom = 15.0
rect_min_size = Vector2( 40, 0 )

[node name="FilterWidth" type="MarginContainer" parent="Control/MainVBox/MainContainer"]
margin_top = 204.0
margin_right = 160.0
margin_bottom = 234.0

[node name="IndividualVBox" type="VBoxContainer" parent="Control/MainVBox/MainContainer/FilterWidth"]
margin_right = 160.0
margin_bottom = 30.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="Control/MainVBox/MainContainer/FilterWidth/IndividualVBox"]
margin_right = 160.0
margin_bottom = 14.0
text = "Filter Width"

[node name="HBox" type="HBoxContainer" parent="Control/MainVBox/MainContainer/FilterWidth/IndividualVBox"]
margin_top = 14.0
margin_right = 160.0
margin_bottom = 30.0

[node name="HSlider" type="HSlider" parent="Control/MainVBox/MainContainer/FilterWidth/IndividualVBox/HBox"]
margin_right = 116.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 64.0
step = 0.5
value = 5.0

[node name="Label" type="Label" parent="Control/MainVBox/MainContainer/FilterWidth/IndividualVBox/HBox"]
margin_left = 120.0
margin_top = 1.0
margin_right = 160.0
margin_bottom = 15.0
rect_min_size = Vector2( 40, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MainVBox/MainContainer"]
margin_top = 238.0
margin_right = 160.0
margin_bottom = 262.0

[node name="CheckBox" type="CheckBox" parent="Control/MainVBox/MainContainer/HBoxContainer"]
margin_right = 24.0
margin_bottom = 24.0
pressed = true

[node name="Label" type="Label" parent="Control/MainVBox/MainContainer/HBoxContainer"]
margin_left = 28.0
margin_top = 5.0
margin_right = 152.0
margin_bottom = 19.0
text = "Mass Spectrometer"
[connection signal="pressed" from="Control/MainVBox/HideButton" to="." method="_on_HideButton_pressed"]
[connection signal="value_changed" from="Control/MainVBox/MainContainer/EField/IndividualVBox/HBox/HSlider" to="." method="_on_EField_value_changed"]
[connection signal="value_changed" from="Control/MainVBox/MainContainer/BField/IndividualVBox/HBox/HSlider" to="." method="_on_BField_value_changed"]
[connection signal="value_changed" from="Control/MainVBox/MainContainer/MinVelocity/IndividualVBox/HBox/HSlider" to="." method="_on_minVelocity_value_changed"]
[connection signal="value_changed" from="Control/MainVBox/MainContainer/MaxVelocity/IndividualVBox/HBox/HSlider" to="." method="_on_maxVelocity_value_changed"]
[connection signal="value_changed" from="Control/MainVBox/MainContainer/Timer/IndividualVBox/HBox/HSlider" to="." method="_on_timer_value_changed"]
[connection signal="value_changed" from="Control/MainVBox/MainContainer/FilterLocation/IndividualVBox/HBox/HSlider" to="." method="_on_filterLocation_value_changed"]
[connection signal="value_changed" from="Control/MainVBox/MainContainer/FilterWidth/IndividualVBox/HBox/HSlider" to="." method="_on_filterWidth_value_changed"]
[connection signal="toggled" from="Control/MainVBox/MainContainer/HBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
